<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="app_name_capitalize">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="yp_android_course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_apk_text">Share APK</string>
    <string name="my_email">costya.kisurin@yandex.ru</string>
    <string name="message_for_android_developers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="acknowledge_for_android_dev">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="yp_offertory_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="error_found_nothing">Ничего не нашлось</string>
    <string name="error_no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_looked_for">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="start_time">00:00</string>
    <string name="error">Произошла ошибка!</string>
    <string name="list_of_favorite_tracks_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists_not_created">Вы не создали\n ни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="title">Название ⃰</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="no_tracks_in_playlist">В этом плейлисте\nнет треков</string>
    <string name="name_of_folder_for_playlists_covers">PlaylistsCovers</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="track_was_added_in_playlist">Добавлено в плейлист %s</string>
    <string name="finalize_the_playlist">Завершить создание плейлиста?</string>
    <string name="warning_of_unsaved_data_loss">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finalize">Завершить</string>
    <string name="error_occurred">Произошла ошибка!</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="do_you_want_delete_playlist">Хотите удалить плейлист «%s»?</string>
    <string name="empty_playlist_for_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete">Удалить</string>
    <string name="delete_track_from_playlist_question">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="playlist_was_created">Плейлист %s создан</string>
</resources>