<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.activity.SettingsFragment"
    android:theme="@style/Theme.DayNightScreen">

    <TextView
        android:id="@+id/tvSettingsHeader"
        style="@style/Header"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/padding_dimen"
        android:layout_marginTop="@dimen/padding_dimen"
        android:text="@string/settings" />

    <Switch
        android:id="@+id/sNightTheme"
        style="@style/SettingsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSettingsHeader"
        android:layout_gravity="start"
        android:text="@string/black_theme"
        android:thumb="@drawable/settings_switch_thumb_selector"
        app:track="@drawable/settings_switch_track_selector"
        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvShareApp"
        style="@style/SettingsTextView"
        android:layout_below="@id/sNightTheme"
        app:drawableEndCompat="@drawable/share"
        android:text="@string/share_app" />

    <TextView
        android:id="@+id/tvSupport"
        style="@style/SettingsTextView"
        android:layout_below="@id/tvShareApp"
        app:drawableEndCompat="@drawable/support"
        android:text="@string/write_to_support" />

    <TextView
        android:id="@+id/tvUserAgreement"
        style="@style/SettingsTextView"
        android:layout_below="@id/tvSupport"
        app:drawableEndCompat="@drawable/right_arrow"
        android:text="@string/user_agreement" />

</RelativeLayout>