<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_dimen"
    android:paddingHorizontal="@dimen/padding_dimen"
    android:theme="@style/Theme.MainScreen">

    <TextView
        android:layout_marginTop="14dp"
        android:gravity="top"
        android:text="@string/app_name_capitalize"
        android:textColor="@color/yp_white"
        style="@style/Header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            android:layout_marginBottom="@dimen/padding_dimen"
            android:text="@string/search"
            app:icon="@drawable/search"
            style="@style/MainScreenButton" />

        <Button
            android:id="@+id/media_button"
            android:layout_marginBottom="@dimen/padding_dimen"
            android:text="@string/media"
            app:icon="@drawable/media"
            style="@style/MainScreenButton" />

        <Button
            android:id="@+id/settings_button"
            android:text="@string/settings"
            app:icon="@drawable/settings"
            style="@style/MainScreenButton"/>

    </LinearLayout>

</LinearLayout>