<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_dimen"
    android:paddingEnd="@dimen/elem_padding"
    android:paddingTop="4dp"
    android:theme="@style/Theme.SettingsScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_marginEnd="@dimen/elem_padding"
            android:layout_marginVertical="@dimen/elem_padding"
            android:src="@drawable/back_arrow"
            style="@style/SettingsImageView"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/elem_padding"
            android:text="@string/settings"
            style="@style/Header" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="@dimen/point_in_setting_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/black_theme"
            style="@style/SettingsTextView" />

        <Switch
            android:id="@+id/night_theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:alpha="0.6"
            android:thumb="@drawable/settings_switch_thumb_selector"
            app:track="@drawable/settings_switch_track_selector"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

    </FrameLayout>

    <TextView
        android:layout_marginBottom="@dimen/point_in_setting_padding"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/share"
        style="@style/SettingsTextView"/>

    <TextView
        android:layout_marginBottom="@dimen/point_in_setting_padding"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/support"
        style="@style/SettingsTextView" />

    <TextView
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/right_arrow"
        style="@style/SettingsTextView" />

</LinearLayout>