<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clNewPlaylist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.DayNightScreen"
    tools:context=".ui.media.activity.NewPlaylistFragment">

    <ImageView
        android:id="@+id/ivBackToPrevScreen"
        style="@style/BackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNewPlaylistHeader"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivBackToPrevScreen"
        app:layout_constraintTop_toTopOf="@id/ivBackToPrevScreen"
        app:layout_constraintBottom_toBottomOf="@id/ivBackToPrevScreen"
        android:text="@string/new_playlist"
        android:textSize="@dimen/basic_text_size" />

    <ImageView
        android:id="@+id/ivAddPlaylistCover"
        android:layout_width="@dimen/zero_dimen"
        android:layout_height="@dimen/zero_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBackToPrevScreen"
        app:layout_constraintBottom_toTopOf="@id/etTitleOfPlaylist"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintDimensionRatio="w, 1:1"
        android:scaleType="centerCrop"
        android:src="@drawable/add_playlist_cover_background" />

    <EditText
        android:id="@+id/etTitleOfPlaylist"
        style="@style/NewPlaylistEditText"
        android:layout_width="@dimen/zero_dimen"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAddPlaylistCover"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="@dimen/padding_dimen"
        android:padding="@dimen/padding_dimen"
        android:background="@drawable/background_for_create_playlist_edit_text"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/etPlaylistDescription"
        style="@style/NewPlaylistEditText"
        android:layout_width="@dimen/zero_dimen"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitleOfPlaylist"
        android:layout_marginTop="@dimen/padding_dimen"
        android:layout_marginHorizontal="@dimen/padding_dimen"
        android:padding="@dimen/padding_dimen"
        android:background="@drawable/background_for_create_playlist_edit_text"
        android:hint="@string/description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bSavePlaylist"
        style="@style/CreateNewPlaylistButton"
        android:layout_width="@dimen/zero_dimen"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPlaylistDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/padding_dimen"
        android:layout_marginBottom="@dimen/padding_dimen"
        app:layout_constraintVertical_bias="1.0"
        android:background="@drawable/add_new_playlist_button_selector"
        android:text="@string/create"
        android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>